# ceri-m1-ecommerce-2022

./: .gitignore  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.config
.github/workflows/: tests_and_deploy.yml
backend/: environment_variable.py  globals.py  main.py  pyproject.toml  requirements.txt  setup.py
backend/src/: api_metadata.py  backend_metadata.py  main.py  run_api.py  run_backend.py
backend/src/classes/: admin.py  album.py  algolia.py  artist.py  database.py  database.sql  environment_variable.py  item.py  song.py  token.py  user.py
backend/src/database/: database.py  database.sql
backend/tests/: test_album.py  test_artist.py  test_run_backend.py  test_song.py  unit_tests.py
frontend/vue-project/: index.html  package-lock.json  package.json  vite.config.js
frontend/vue-project/public/images/albums/: rename.bat
frontend/vue-project/src/: App.vue  main.js
frontend/vue-project/src/components/: AjoutForm.vue  Album.vue  AlbumDetails.vue  AlbumList.vue  BackofficeAlbumList.vue  BackofficeConnexionForm.vue  Carousel.vue  CommandesComp.vue  ConnexionModal.vue  Header.vue  HeaderBackoffice.vue  InscriptionForm.vue  PanierComp.vue  SearchBar.vue
frontend/vue-project/src/components/backoffice/: AjoutForm.vue  BackofficeAlbumList.vue  BackofficeConnexionForm.vue  CommandesUtilisateurComp.vue  (+2 more)
frontend/vue-project/src/router/: index.js
frontend/vue-project/src/views/: Accueil.vue  Backoffice.vue  BackofficeConnexion.vue  Commandes.vue  DetailItem.vue  Inscription.vue  Panier.vue
terraform/: main.tf
(+5 files in other folders)
