[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.1"
sqlmodel = "^0.0.8"
uvicorn = "^0.18.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.982"
pylint = "^2.15.4"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
